# Evergreen.lxl

./: manifest.json  meson.build  meson_options.txt
.github/workflows/: build.yml
plugins/evergreen/: init.lua
subprojects/: ltreesitter_plugin_api.wrap
subprojects/packagefiles/ltreesitter/: meson.build  meson_options.txt
subprojects/packagefiles/ltreesitter_plugin_api/: meson.build  meson_options.txt
subprojects/packagefiles/ltreesitter_plugin_api/lite-xl-plugin-api/include/: lite_xl_plugin_api.h
subprojects/packagefiles/tree-sitter/: meson.build
subprojects/packagefiles/tree-sitter-c/: meson.build
subprojects/packagefiles/tree-sitter-cpp/: meson.build
subprojects/packagefiles/tree-sitter-d/: meson.build
subprojects/packagefiles/tree-sitter-diff/: meson.build
subprojects/packagefiles/tree-sitter-go/: meson.build
subprojects/packagefiles/tree-sitter-go-mod/: meson.build
subprojects/packagefiles/tree-sitter-javascript/: meson.build
subprojects/packagefiles/tree-sitter-julia/: meson.build
subprojects/packagefiles/tree-sitter-lua/: meson.build
subprojects/packagefiles/tree-sitter-rust/: meson.build
subprojects/packagefiles/tree-sitter-zig/: meson.build
