option('arch_tuple', type : 'string', value : '', description: 'Specify a custom architecture tuple')
option('data_dir', type : 'string', value : '/', description: 'Data directory of installation')
option('use_system_lua', type : 'boolean', value : false, description: 'Prefer System Lua over the meson wrap')
option('jit', type : 'boolean', value : true, description: 'Use luajit')
